--- a/index.html
+++ b/index.html
@@ -1488,6 +1488,18 @@
             </a>
           </div>
 
+          <div class="student-card" id="ben-shapiro-card">
+            <a href="students/ben-shapiro.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Benjamin Shapiro</h4>
+                <p class="student-location">Houston, TX</p>
+              </div>
+            </a>
+          </div>
+
           <div class="student-card" id="karuna-barla-card">
             <a href="students/karuna-barla.html">
               <div class="view-profile-div">
